# DLSECommercialSupportSuite

./: .gitignore  .gitmodules  DroneBridgeCommercialSupportSuite.py  LICENSE  README.md  batch_install_dlse_allinone.py  batch_ota_license_activation.py  batch_ota_update_allinone.py  example_esp32_dlse_allinone_install.py  example_esp32_download_log.py  example_esp32_download_log_MAVSDK.py  example_esp32_get_license.py  example_esp32_manual_add_udp_client.py  example_esp32_ota_update.py  example_esp32_remote_reset.py  example_esp32_request_lic.py  example_esp32_scan_for_devices.py  example_params_update_flash.py  pyproject.toml
api_definition/: openapi_definition.yaml
nvs_partition_tool/: README.rst
parameters/: Params_Explained.xlsx  db_show_params.csv
resources/: pubkey_DLSE.pem
test/: TestAddressBinaryMap.py  TestCSVFileHandling.py  TestCSVMerge.py  TestCSVUpdateParameters.py  TestLogger.py  TestSerialLicenseBackup.py
test/test_resources/: db_show_params.csv  db_show_params_user_diff_release.csv  db_show_params_user_same_release.csv
